@@ -9,6 +9,8 @@ Revelation changelog
 
 	* use stock gtk icon sizes instead of custom ones
 
+	* minor improvements to password checking
+
 2006-01-20  Erik Grinaker <erikg@codepoet.no>
 
 	* strip xml entities from password on clipboard copy or
